src/main/webapp/resources/css/main.css
.node-with-margin {
    margin-left:30px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.node-break {
    word-wrap:break-word;
}

#commons-body {
    width:95%;
    margin: auto;
}

.grandnode-with-margin {
    margin-left:50px;
    padding-left: 2em;
    text-indent: -2em;

    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.fullscreen {
    height:100%;
    width:100%;
    min-height: 1000px;
}

#search {
    margin-top:5px;
}

.inline {
    display:inline;
}

.font-size-14 {
    font-size:14px;
}

.font-size-16 {
    font-size:16px;
}

.font-size-18 {
    font-size:18px;
}

.font-size-20 {
    font-size:20px;
}


.font-size-21 {
    font-size:21px;
}

.commons-header {
    margin-bottom:0px;
}

.commons-subheader {
    margin-top:0px;
}

.modal-dialog {
    width: 80% !important;
}

.list-group-item {
    padding:1px 3px !important;
}

.margin-top-22 {
    margin-top: 22px !important;
}

.margin-top-30 {
    margin-top: 30px !important;
}

.sub-title-font {
    color: #0c2b65;
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
    font-weight: normal;
}

.title-font {
    color: #0c2b65;
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
    font-weight: normal;
}

.title-font:after {
    content: "";
    display: block;
    background-color: #0c2b65;
    height: 10px;
    height: 0.625rem;
    margin-top: 21px;
    margin-top: 1.3125rem;
}

.content-title-font {
    color: #0c2b65;
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
    font-weight: normal;
}

.content-title-font:after {
    content: "";
    display: block;
    background-color: #0c2b65;
    height: 5px;
    height: 0.425rem;
    margin-top: 11px;
    margin-top: 0.8125rem;
}

.dtm-disclaimer {
    font-size:11px;
    margin-bottom:5px;
}

@media screen and (max-width: 1105px) {
    .content-title-font {
        color: #0c2b65;
        font-size:19px;
        font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
        font-weight: normal;
    }
}

@media screen and (max-width: 899px) {
    .content-title-font {
        color: #0c2b65;
        font-size:16px;
        font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
        font-weight: normal;
    }
}

@media screen and (max-width: 899px) {
    .subtitle-font {
        color: #0c2b65;
        font-size:15px;
        font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
        font-weight: normal;
    }
}

@media screen and (max-width: 767px) {
    .subtitle-font {
        color: #0c2b65;
        font-size:18px;
        font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
        font-weight: normal;
    }
}

@media screen and (max-width: 767px) {
    .content-title-font {
        color: #0c2b65;
        font-size:24px;
        font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
        font-weight: normal;
    }
}

.subtitle-font {
    color: #0c2b65;
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
    font-weight: normal;
}

.subtitle-font:after {
    content: "";
    display: block;
    background-color: #0c2b65;
    height: 5px;
    height: 0.425rem;
    margin-top: 11px;
    margin-top: 0.8125rem;
}

.main-nav {
    background-color: #0c2b65;
    color: white;
    height: 100% !important;
    width: 100% !important;
}

.background-nav {
    background-color: #0c2b65;
}

.leaf {
    color:white !important;
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
    font-weight: normal;
}

.spacer {
    top: auto; left: auto; bottom: auto; right: auto; margin: 0px; display: block; position: relative; box-sizing: content-box; width: 100%; min-height: 80px; height: 80px;
}

.spacer-small {
    top: auto; left: auto; bottom: auto; right: auto; margin: 0px; display: block; position: relative; box-sizing: content-box; width: 100%; min-height: 30px; height: 30px;
}

.navbar-brand-mod {
    float: left !important;
    height: 80px !important;
    padding-top: 0px !important;
    padding-bottom: 0px !important;
    padding-left: 15px !important;
    padding-right: 15px !important;
    font-size: 18px !important;
    line-height: 20px !important;
}

.navbar-fixed-top {
    min-height: 80px !important;
}

.inline-block {
    display: inline-block;
}

a {
    color: #0c2b65 !important;
    text-decoration: none;
}

.modal-dialog{
    position: relative !important;
    display: table;
    overflow-y: auto;
    overflow-x: auto;
    width: auto !important;
    min-width: 300px;
}

.modal-content {
    border-left: 5px solid #0c2b65 !important;
    border-right: 5px solid #0c2b65 !important;
    border-top: 2px solid #0c2b65 !important;
    border-bottom: 5px solid #0c2b65 !important;
}
.popover {
    border: 10px solid rgba(9, 41, 64, 1) !important;
}

.popover-content {
    padding: 5px 5px !important;
}

#imagepreview {
    width:100%;
}

.btn-default {
    color: #333;
    background-color: #fff !important;
    border-color: #ccc !important;
}

.page-divider {display:none}

.publication-info {
    color: #666 !important;
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
    /*text-transform: uppercase;*/
}

.standard-font {
    font-family: "TransportNewMedium",Helvetica,Arial,sans-serif;
}

.underline {
    text-decoration: underline;

}

.list-group-item {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.list-group-item li {
    white-space: pre-wrap;
}

@media screen and (min-width: 768px) {
    .navbar-padding {
        padding-left: 30px !important;
    }

    /*.navbar-nav {
        margin: 7.5px -15px !important;
    }*/

    .navbar-nav {
        margin-right: -15px !important;
        margin-left: -15px !important;
    }

    .padding-top-30 {
        padding-top: 30px!important;
    }

    .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
        height: 80px;
        background-color: rgba(0,0,0,0.25) !important;
    }

    .padding-top-30:hover {
        height: 80px;
        background-color: rgba(0,0,0,0.25) !important;
    }
    .margin-top-13 {
        margin-top: 13px;
    }
}

@media screen and (max-width: 767px) {
    .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
        background-color: rgba(0,0,0,0.25) !important;
    }

    .navbar-form {
        padding-top: 0px !important;
        padding-right: 0px !important;
        padding-bottom: 0px !important;
        padding-left: 15px;

        margin-top: 0px !important;
        margin-right: 0px !important;
        margin-bottom: 0px !important;
        margin-left: 0px !important;
        border-top: 0px solid transparent !important;
        border-bottom: 0px solid transparent !important;
        -webkit-box-shadow: none !important;
        box-shadow: none !important;
    }
}
@media (min-width: 766px) and (max-width: 767px) {
    .navbar-collapse.collapse {
        display: none !important;
    }
    .navbar-collapse.collapse.in {
        display: block !important;
    }
    .navbar-header .collapse, .navbar-toggle {
        display:block !important;
    }
    .navbar-header {
        float:none;
    }
    .navbar-left,.navbar-right {
        float: none !important;
    }

    .navbar-collapse {
        overflow: hidden !important;
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
        top: 0;
        border-width: 0 0 1px;
    }
    .navbar-nav {
        float: none!important;
        margin-top: 7.5px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }

    .navbar-nav {
        margin: 7.5px -15px;
    }
}

.bs-docs-footer {
    /*padding-top:40px;
    padding-bottom:40px;
    margin-top:100px;*/
    color:#777;
    /*text-align:center;*/
    /*border-top:3px solid #0c2b65;*/
    font-size:14px;
    margin-top:10px;
    /*padding-bottom:2px;
    padding-top:10px;*/
}

.footer-sep {
    margin-bottom:7px;
}

.snomed-message,.disclaimer {
    font-size:x-small;
    margin-top:5px;
}

.modal-software-item {
    margin-top:5px;
    word-wrap:break-word;
    overflow-wrap: break-word;
    /*word-break: break-all;
    -ms-word-break: break-all;*/
}

.modal-software-item a {
    word-break: break-all;
}

.software-header {
    padding:0px !important;
    padding-left:15px !important;
    padding-right:15px !important;
    background-color: #0c2b65 !important
}

.color-white {
    color:white;
}

#logo-img {
    margin-top:3px;
}

.bold {
    font-weight:600;
}

#software-location {
    text-decoration:underline;
}

#software-source-code {
    text-decoration: underline;
}

#software-modal {
    max-width:600px;
}

/*.push {
    height:50px;
}*/

/*#content {
    min-height: calc(100vh - 125px);
}*/

html {
    position: relative;
    min-height: 100%;
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 35px !important;
}
.footer-xs {
    margin-top:10px;
    position: fixed;
    left:0;
    right:0;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 50px;
    background-color: #0c2b65;
}

.footer-lg {
    margin-top:10px;
    position: fixed;
    left:0;
    right:0;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 30px;
    background-color: #0c2b65;
}

.footer-container-lg {
    margin-top: 6px;
    margin-left: 20px;
}

.footer-container-xs {
    margin-top: 6px;
}

.about-item {
    margin-top:20px;
}

.theme-primary-color {
    color:#0c2b65
}

.olympus-color {
    color:#0d3d98;
}

.ae-color {
    color:#db6715;
}

#dev-team-footer {
    font-size:12px;
}

@media (max-width:440px) {
    #page-title {
        font-size:15px;
    }
}

@media (max-width:350px){
    .hidden-extra-xs {
        display:none !important;
    }
}

.tab-content {
    margin-bottom:20px;
}

.bullet-point:before {
    content: ' \25CF';
    font-size: 11px;
}

.pointer {
    cursor:pointer;
}

.highlighted-item {
    padding-bottom: 30px !important;
    background-color: #09204c !important;
}

.legend {
    margin-bottom: 45px;
    position: fixed;
    margin-right: 25px;
    right: 0;
    bottom: 0;
    color: #0c2b65;
    border: 2px solid #0c2b65;
    padding-right: 5px;
    padding-left: 5px;
    border-radius:5px;
    background-color: white;
    z-index:100;

}

.legend-small {
    position: absolute;
    margin-bottom: 60px;
    color: #0c2b65;
    border: 2px solid #0c2b65;
    padding-right: 5px;
    padding-left: 5px;
    border-radius:5px;
    background-color: white;
}

.legend-font {
    font-size: 11px;
}

.tooltip > .tooltip-inner {
    background-color: rgba(255, 255, 255, 1); 
    color: black; 
    border: 1px solid rgba(6, 36, 75, 1);
    padding: 5px;
    font-size: 14px;
}

.tooltip.right > .tooltip-arrow {
    border-right: 5px solid rgba(6, 36, 75, 1);
}

.tooltip.left > .tooltip-arrow {
    border-left: 5px solid rgba(6, 36, 75, 1);
}

.tooltip.in{opacity:1!important;}

.no-link {
    cursor: initial;
}

#tools-treeview ul li {
    cursor: default;
}

#disease-transmission-models-treeview ul li {
    cursor: default;
}

#system-software-treeview ul li {
    cursor: default;
}

.no-padding {
    padding:0px !important;
}

.tools {
    color: #0c2b65;
    text-decoration:underline;
}

.italic {
    font-style: italic;
}

